<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4"
    android:background="#7C22C2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#6500B7"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/name_title"
            app:titleTextColor="#FDFA94" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/title_page_one"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/input_border"
        android:backgroundTint="#6500B7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="4dp"
            android:elevation="5dp"
            android:text="@string/title_page_four"
            android:textColor="#FDFA94"
            android:textSize="28sp"
            android:textStyle="normal" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/about_box"
        android:layout_width="300dp"
        android:layout_height="440dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/input_border"
        android:backgroundTint="#4000B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:paddingTop="4dp"
            android:paddingLeft="8dp"
            android:elevation="2dp"
            android:text="@string/title_page_three"
            android:textColor="#FDFA94"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_info"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/circle_border"
        android:backgroundTint="#6500B7"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtButtonBackFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:gravity="center_horizontal"
            android:paddingTop="0dp"
            android:text="@string/arrow"
            android:textColor="#FDFA94"
            android:textSize="42sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>