<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#7C22C2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#6500B7"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/name_title"
            app:titleTextColor="#FDFA94" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/title_page_one"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/input_border"
        android:backgroundTint="#6500B7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTitle_page_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="4dp"
            android:elevation="5dp"
            android:text="@string/title_page_one"
            android:textColor="#FDFA94"
            android:textSize="28sp"
            android:textStyle="normal" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/text_view_providerOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7C22C2"
        android:paddingBottom="100dp"
        android:scrollbarStyle="outsideOverlay"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_page_one">
        !--progressbar for displaying our loadinig indicator-->

        <ProgressBar
            android:id="@+id/idLoadingPBOne"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swiperefreshOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ListView
                android:id="@+id/lvProviderOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:clipToPadding="false"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_info"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/circle_border"
        android:backgroundTint="#6500B7"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtButton_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:gravity="center_horizontal"
            android:paddingTop="6dp"
            android:text="@string/about_icon"
            android:textColor="#FDFA94"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>