<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:background="#7C22C2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#6500B7"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/name_title"
            app:titleTextColor="#FDFA94" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/title_page_one"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/input_border"
        android:backgroundTint="#6500B7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="4dp"
            android:elevation="5dp"
            android:text="@string/title_page_three"
            android:textColor="#FDFA94"
            android:textSize="28sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/description_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_border"
        android:backgroundTint="#4000B5"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@+id/appBarLayout"
        app:layout_constraintStart_toStartOf="@+id/appBarLayout"
        app:layout_constraintTop_toBottomOf="@+id/title_page_one">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgDescriptionBox"
                android:layout_width="130dp"
                android:layout_height="160dp" />

            <TextView
                android:id="@+id/txtInfoLibro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:text="@string/title_page_three"
                android:textColor="#FDFA94"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDescriptionBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:maxLines="15"
                android:text="@string/title_page_three"
                android:textColor="#FDFA94"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_info"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/circle_border"
        android:backgroundTint="#4000B5"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtButtonBackThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:gravity="center_horizontal"
            android:paddingTop="0dp"
            android:text="@string/arrow"
            android:textColor="#FDFA94"
            android:textSize="42sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>